nova (2013.1~g2~20121129.17379-0ubuntu1) UNRELEASED; urgency=low

  * New upstream release. 
  * debian/patches/ubuntu-show-tests.patch: Dropped no longer needed.
  * debian/rules: Run nosetests running in verbose.

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 29 Nov 2012 10:56:31 -0600

nova (2013.1~g1-0ubuntu1) raring; urgency=low

  [ Adam Gandelman ]
  * debian/control: Ensure novaclient is upgraded with nova,
    require python-keystoneclient >= 1:2.9.0. (LP: #1073289)
  * debian/patches/{ubuntu/*, rbd-security.patch}: Dropped, applied
    upstream.
  * debian/control: Add python-testtools to Build-Depends.

  [ Chuck Short ]
  * New upstream version.
  * Refreshed debian/patches/avoid_setuptools_git_dependency.patch.
  * debian/rules: FTBFS if missing binaries.
  * debian/nova-scheudler.install: Add missing rabbit-queues and
    nova-rpc-zmq-receiver.
  * Remove nova-volume since it doesnt exist anymore, transition to cinder-*.
  * debian/rules: install apport hook in the right place.
  * debian/patches/ubuntu-show-tests.patch: Display test failures.
  * debian/control: Add depends on genisoimage
  * debian/control: Suggest guestmount.
  * debian/control: Suggest websockify. (LP: #1076442)
  * debian/nova.conf: Disable nova-volume service.
  * debian/control: Depend on xen-system-* rather than the hypervisor.
  * debian/control, debian/mans/nova-conductor.8, debian/nova-conductor.init,
    debian/nova-conductor.install, debian/nova-conductor.logrotate
    debian/nova-conductor.manpages, debian/nova-conductor.postrm
    debian/nova-conductor.upstart.in: Add nova-conductor service.
  * debian/control: Add python-fixtures as a build deps.

  [ Yolanda Robla ]
  * debian/nova-common.docs: Installing changelogs from rules
  * debian/rules: Replacing perms in /etc/nova/logging.conf for 0644
  * debian/nova-compute-xcp.lintian-overrides: skip empty binary package warn
  * debian/control: adduser dependency on nova-compute