@@ -1,2 +1,0 @@
-[BUILDDEB]
-merge = True
