@@ -1,8 +1,9 @@
-description "Nova network worker"
-author "Soren Hansen <soren@linux2go.dk>"
+description "Nova Metadata API server"
+author "Joe Heck <heckj@mac.com>"
 
 start on runlevel [2345]
 stop on runlevel [016]
+
 
 chdir /var/run
 
@@ -14,4 +15,6 @@ pre-start script
 	chown nova:root /var/lock/nova/
 end script
 
-exec su -s /bin/sh -c "exec nova-network --config-file=/etc/nova/nova.conf" nova
+script
+	exec start-stop-daemon --start --chuid nova --exec /usr/bin/nova-api-metadata --config-file=/etc/nova/nova.conf
+end script
