@@ -1,0 +1,20 @@
+description "Nova OpenStack Compute API server"
+author "Joe Heck <heckj@mac.com>"
+
+start on runlevel [2345]
+stop on runlevel [016]
+
+
+chdir /var/run
+
+pre-start script
+	mkdir -p /var/run/nova
+	chown nova:root /var/run/nova/
+
+	mkdir -p /var/lock/nova
+	chown nova:root /var/lock/nova/
+end script
+
+script
+	exec start-stop-daemon --start --chuid nova --exec /usr/bin/nova-api-os-compute --config-file=/etc/nova/nova.conf
+end script
