@@ -1,4 +1,4 @@
-description "Nova compute worker"
+description "Nova cert"
 author "Soren Hansen <soren@linux2go.dk>"
 
 start on runlevel [2345]
@@ -13,8 +13,8 @@ pre-start script
 
 	mkdir -p /var/lock/nova
 	chown nova:root /var/lock/nova/
-
-	modprobe nbd
 end script
 
-exec su -s /bin/sh -c "exec nova-compute --config-file=/etc/nova/nova.conf --config-file=/etc/nova/nova-compute.conf" nova
+script
+	exec start-stop-daemon --start --chuid nova --exec /usr/bin/nova-cert --config-file=/etc/nova/nova.conf
+end script
