@@ -1,5 +1,5 @@
-description "Nova Metadata API server"
-author "Joe Heck <heckj@mac.com>"
+description "Nova conductor"
+author "Chuck Short <zulcss@ubuntu.com>"
 
 start on runlevel [2345]
 stop on runlevel [016]
@@ -15,4 +15,6 @@ pre-start script
 	chown nova:root /var/lock/nova/
 end script
 
-exec su -s /bin/sh -c "exec nova-api-metadata --config-file=/etc/nova/nova.conf" nova
+script
+	exec start-stop-daemon --start --chuid nova --exec /usr/bin/nova-conductor --config-file=/etc/nova/nova.conf
+end script
