@@ -16,4 +16,6 @@ pre-start script
 	chown nova:root /var/lock/nova
 end script
 
-exec su -s /bin/sh -c "exec nova-consoleauth --config-file=/etc/nova/nova.conf" nova
+script
+	exec start-stop-daemon --start --chuid nova --exec /usr/bin/nova-consoleauth --config-file=/etc/nova/nova.conf
+end script
