@@ -1,9 +1,8 @@
-description "Nova scheduler"
+description "Nova network worker"
 author "Soren Hansen <soren@linux2go.dk>"
 
 start on runlevel [2345]
 stop on runlevel [016]
-
 
 chdir /var/run
 
@@ -15,4 +14,6 @@ pre-start script
 	chown nova:root /var/lock/nova/
 end script
 
-exec su -s /bin/sh -c "exec nova-scheduler --config-file=/etc/nova/nova.conf" nova
+script
+	exec start-stop-daemon --start --chuid nova --exec /usr/bin/nova-network --config-file=/etc/nova/nova.conf
+end script
