@@ -68,15 +68,6 @@ override_dh_auto_test:
 	./run_tests.sh -N -P -v
 endif
 
-override_dh_installinit:
-	if dpkg-vendor --derives-from ubuntu ; then \
-		for i in debian/*.upstart.in ; do \
-			MYPKG=`echo $$i | cut -d. -f1` ; \
-			cp $$MYPKG.upstart.in $$MYPKG.upstart ; \
-		done ; \
-	fi
-	dh_installinit --error-handler=true
-
 override_dh_python2:
 	dh_python2
 	dh_python2  /usr/lib/xcp
